--- a/website/src/index.css
+++ b/website/src/index.css
@@ -100,6 +100,7 @@ body {
   justify-content: flex-start;
   margin-top: -20px;
   position: relative;
+  z-index: -1;
 }
 
 .home-title {
@@ -259,6 +260,7 @@ body {
   position: absolute;
   bottom: 0;
   margin-bottom: 20px;
+  z-index: -1;
 }
 
 .footer a {
@@ -290,6 +292,7 @@ body {
   align-items: flex-end;
   justify-content: flex-start;
   padding: 20px 0;
+  z-index: -1;
 }
 
 .playlist-title {
@@ -430,4 +433,63 @@ body {
 .loading-wrapper span {
   margin-top: 20px;
   color: #bbbbbb  ;
+}
+
+.about-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
+.positioning {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.translucent {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  z-index: 4;
+}
+
+.about-div {
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+  background-color: var(--blue);
+  width: 700px;
+  border-radius: 12px;
+  border: 2px solid var(--green);
+  z-index: 5;
+}
+
+.about-div h1 {
+  color: var(--green);
+  margin: -5px 0 5px 0;
+}
+
+.about-div span {
+  margin-top: 5px;
+  color: var(--white)
+}
+
+.about-div h3 {
+  color: var(--green);
+  margin-top: 20px;
+}
+
+.credits {
+  width: 100%;
+  text-align: center;
+  margin-top: 20px;
+  color: #aaaaaa;
 }
